--- a/infra/k8s/deployment.yml
+++ b/infra/k8s/deployment.yml
@@ -38,3 +38,7 @@ spec:
             secretKeyRef:
               name: k8-cluster-secret
               key: key_base
+        - name: POD_IP
+          valueFrom:
+            fieldRef:
+              fieldPath: status.podIP
