--- a/infra/k8s/service.yml
+++ b/infra/k8s/service.yml
@@ -1,5 +1,5 @@
-apiVersion: v1
 kind: Service
+apiVersion: v1
 metadata:
   name: k8-cluster-service
   namespace: k8-cluster
@@ -12,3 +12,16 @@ spec:
       port: 4000
       targetPort: 4000
   type: LoadBalancer
+
+---
+
+kind: Service
+apiVersion: v1
+metadata:
+  name: k8-cluster-headless-service
+  namespace: k8-cluster
+spec:
+  selector:
+    app: k8-cluster
+  type: ClusterIP
+  clusterIP: None
